--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "aws-sdk": "^2.1477.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "bignumber.js": "^9.2.1",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "child_process": "^1.0.2",
@@ -37,16 +38,19 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.5",
+    "elliptic": "^6.6.1",
     "ethers": "^6.13.2",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.0",
     "google-auth-library": "^5.5.1",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "js-sha512": "^0.8.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
+    "keccak256": "^1.0.6",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "node-cron": "^3.0.3",
@@ -60,8 +64,7 @@
     "shelljs": "^0.8.5",
     "uuid": "^3.3.3",
     "web3": "^4.16.0",
-    "xss-clean": "^0.1.1",
-    "hpp": "^0.2.3"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
