--- a/user/package.json
+++ b/user/package.json
@@ -95,6 +95,7 @@
     "react-number-format": "^5.3.4",
     "react-organizational-chart": "^2.2.1",
     "react-player": "^2.16.0",
+    "react-qr-code": "^2.0.15",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.3",
