--- a/server/package.json
+++ b/server/package.json
@@ -51,6 +51,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "keccak256": "^1.0.6",
+    "lru-cache": "^11.1.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "node-cron": "^3.0.3",
